# rlm-compaction

./: .gitignore  README.md  pyproject.toml
configs/: latent_briefing.yaml  summary.yaml  text.yaml  vanilla_am.yaml
evals/: __init__.py  summarize.py
evals/longbench_v2/: README.md  __main__.py  run_qwen3.sh
evals/longbench_v2/results/: longbench_v2_rlm_Qwen__Qwen3-14B_20260708_173521.jsonl  longbench_v2_rlm_Qwen__Qwen3-14B_20260708_173521.summary.json
evals/utils/: gpu_shell.sh
experiments/: compare_handoffs.py  kv_scratch.py  smoke_test_am.py  smoke_test_rlm.py  test_rlm.py
src/rlm/: UPSTREAM.md
src/rlm/clients/: __init__.py  huggingface.py
src/rlm/compaction/: __init__.py
src/rlm/compaction/attention_matching/: README.md  UPSTREAM.md  __init__.py  batched_solve.py  cache_utils.py  core.py  masks.py  task_scoring.py
src/rlm/core/: rlm.py  types.py
src/rlm/environments/: __init__.py  local_repl.py
src/rlm/handoff/: __init__.py  base.py  full_kv.py  kv_common.py  latent_briefing.py  summary.py  text.py  vanilla_am.py
src/rlm/utils/: prompts.py  token_utils.py
