[project]
name = "rlm-compaction"
version = "0.0.1"
description = "RLM orchestration core with swappable context-handoff/compaction backends"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "openai",
    "anthropic",
    "rich",
    "torch",
    "transformers",
    "accelerate",
    "huggingface_hub",
    "tiktoken",
    "datasets",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
